--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.auth-parent {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+  max-width: 1920px;
+  margin: 0 auto;
+  padding: 2.5rem;
+  flex-direction: column;
+}
+.auth {
+  display: flex;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
-
-.App-link {
-  color: #61dafb;
+.option-active {
+  color: blue;
+  font-weight: 600;
+  margin-right: 1rem;
+  border-bottom: 2px solid blue;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.option {
+  color: black;
+  font-weight: 600;
+  margin-right: 1rem;
+  cursor: pointer;
 }
