--- a/src/components/Register/index.css
+++ b/src/components/Register/index.css
@@ -1,13 +1,13 @@
 .form {
     width: 100%;
 }
-.btn {
+.btn-register {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     width: 100%;
 }
-.btn-child {
+.btn-child-register {
     width: 7.5rem;
     margin-top: 1rem;
     height: 2.5rem;
